--- a/FindMe.Web.Bo/wwwroot/css/app/admin/clients.css
+++ b/FindMe.Web.Bo/wwwroot/css/app/admin/clients.css
@@ -1,4 +1,12 @@
 ﻿
-    #clientsVw .main-table-container {
-        padding-top: 80px;
+#clientsVw .main-table-container {
+    padding-top: 80px;
+}
+
+    #clientsVw .main-table-container .table .btn.action {
+        outline: none;
     }
+
+#clientsVw .modal-body .check-box {
+    transform: translate(10px, 40%);
+}
