--- a/FindMe.Web.Bo/wwwroot/Views/App/Admin/Clients.html
+++ b/FindMe.Web.Bo/wwwroot/Views/App/Admin/Clients.html
@@ -2,79 +2,26 @@
 
 <div id="clientsVw">
 
-    <script type="text/ng-template" id="clientModal.html">
+    <script type="text/ng-template" id="deleteClientModal.html">
         <div class="modal-header">
 
             <div>
-                <h3 class="findme-color-fc-pink">{{(vm.client.legalName || vm.client.dispName ? (vm.client.legalName ? vm.client.legalName : vm.client.dispName) : 'New Client')}}</h3>
+                <h3 class="findme-color-fc-pink">{{vm.appProps.lbl_Delete}} {{(vm.client.legalName || vm.client.dispName ? (vm.client.legalName ? vm.client.legalName : vm.client.dispName) : 'New Client')}}?</h3>
             </div>
 
         </div>
         <div class="modal-body" id="modal-body">
-
-            <form name="frmClient" class="form-horizontal">
-
-                <div class="form-group">
-
-                    <label for="clientLglName" class="col-lg-2 col-md-2 col-sm-12 col-xs-12 control-label">{{vm.appProps.lbl_LglName}}</label>
-
-                    <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
-                        <input id="clientLglName" placeholder="{{vm.appProps.lbl_LglName}}" type="text" class="form-control" ng-model="vm.client.legalName">
-                    </div>
-                </div>
-
-                <div class="form-group">
-
-                    <label for="clientFName" class="col-lg-2 col-md-2 col-sm-12 col-xs-12 control-label">{{vm.appProps.lbl_FName}}</label>
-
-                    <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
-                        <input id="clientFName" placeholder="{{vm.appProps.lbl_FName}}" type="text" class="form-control" ng-model="vm.client.fName">
-                    </div>
-                </div>
-
-                <div class="form-group">
-
-                    <label for="clientLName" class="col-lg-2 col-md-2 col-sm-12 col-xs-12 control-label">{{vm.appProps.lbl_LName}}</label>
-
-                    <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
-                        <input id="clientName" placeholder="{{vm.appProps.lbl_LName}}" type="text" class="form-control" ng-model="vm.client.lName">
-                    </div>
-                </div>
-
-                <div class="form-group">
-
-                    <label for="clientPaid" class="col-lg-2 col-md-2 col-sm-12 col-xs-12 control-label">{{vm.appProps.lbl_PdClnt}}</label>
-                    <span class="check-box col-lg-10 col-md-10 col-sm-12 col-xs-12">
-                        <input type="checkbox" value="None" id="clientPaid" name="clientPaid" ng-model="vm.client.paid" />
-                        <label class="lbl-chkb" for="clientPaid"></label>
-                    </span>
-                </div>
-
-                <div class="form-group">
-                    <label for="clientDesc" class="col-lg-2 col-md-2 col-sm-12 col-xs-12 control-label">{{vm.appProps.lbl_Desc}}</label>
-
-                    <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
-                        <textarea id="clientDesc" placeholder="{{vm.appProps.lbl_Desc}}" class="form-control" ng-model="vm.client.desc"></textarea>
-                    </div>
-                </div>
-
-            </form>
-
         </div>
 
         <div class="modal-footer">
-            <button class="btn btn-findme" type="button" ng-click="vm.ok()">
-                <span class="fa fa-save">&nbsp;&nbsp;</span>
-                <b>{{vm.appProps.lbl_Save}}</b>
+            <button class="btn btn-findme" type="button" ng-click="vm.yes()">
+                <b>{{vm.appProps.lbl_Yes}}</b>
             </button>
-            <button class="btn btn-findme hollow" type="button" ng-click="vm.cancel()">
-                <span class="fa fa-times">&nbsp;&nbsp;</span>
-                <b>{{vm.appProps.lbl_Cancel}}</b>
+            <button class="btn btn-findme hollow" type="button" ng-click="vm.no()">
+                <b>{{vm.appProps.lbl_No}}</b>
             </button>
         </div>
     </script>
-
-
 
 
     <table class="pages col-sm-12 col-xs-12" ng-hide="vm.isBusy">
@@ -86,9 +33,9 @@
         </tr>
         <tr>
             <td>
-                <ul class="pagination" ng-repeat="pg in vm.pgsCollection">
+                <ul class="pagination">
 
-                    <li ng-class="(pg.isActive ? 'active' : '') + ' ' + (pg.disabled ? 'disabled' : '') + ' crsr-pointer'">
+                    <li ng-repeat="pg in vm.pgsCollection" ng-class="(pg.isActive ? 'active' : '') + ' ' + (pg.disabled ? 'disabled' : '') + ' crsr-pointer'">
                         <a ng-class="(pg.isActive ? 'active' : '') + ' ' + (pg.disabled ? 'disabled' : '')" ng-click="vm.gotoPage(pg, true)">
                             <span class="{{pg.icon}}" ng-show="(pg.icon.length > 0)"></span><span>{{pg.text}}</span>
                         </a>
@@ -98,8 +45,9 @@
         </tr>
     </table>
 
+
     <div class="main-table-container">
-        <table class="table table-striped table-hover" ng-init="vm.populateClients()">
+        <table class="table table-striped table-hover data" ng-init="vm.populateClients()">
             <thead>
                 <tr>
                     <td>
@@ -115,35 +63,60 @@
                         <b>{{vm.appProps.lbl_Name}}</b>
                     </td>
                     <td class="text-center">
-                        <b>{{vm.appProps.lbl_Actv}}</b>
+                        <b>{{vm.appProps.lbl_PdClnt}}</b>
                     </td>
                     <td class="text-center">
-                        <b>{{vm.appProps.lbl_PdClnt}}</b>
+                        <b>{{vm.appProps.lbl_Actv}}</b>
                     </td>
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="client in vm.clients">
+                <tr ng-repeat="client in vm.clients" ng-class="client.inEditMode ? 'inEditMode' : ''">
                     <td>
-                        <div class="btn-toolbar">
-                            <button type="button" class="btn btn-sm btn-findme action" title="{{vm.appProps.lbl_Edit}}" ng-click="vm.openModal(client)"><span class="fa fa-edit"></span></button>
-                            <button type="button" class="btn btn-sm btn-findme hollow action" title="{{vm.appProps.lbl_Delete}}"><span class="fa fa-times-circle"></span></button>
+                        <div ng-hide="client.inEditMode" class="btn-toolbar">
+                            <button type="button" class="btn btn-findme action" title="{{vm.appProps.lbl_Edit}}" ng-click="client.inEditMode = true;"><span class="fa fa-edit"></span></button>
+                            <button type="button" class="btn btn-findme hollow action" title="{{vm.appProps.lbl_Delete}}" ng-click="vm.deleteModal(client)"><span class="fa fa-trash"></span></button>
                         </div>
+                        <div ng-show="client.inEditMode && !client.saving" class="btn-toolbar">
+                            <button type="button" class="btn btn-findme action" title="{{vm.appProps.lbl_Save}}" ng-click="vm.save(client)"><span class="fa fa-save"></span></button>
+                            <button type="button" class="btn btn-findme hollow action" title="{{vm.appProps.lbl_Cancel}}" ng-click="vm.revert(client)"><span class="fa fa-times-circle-o"></span></button>
+                        </div>
+
+                        <div ng-show="client.inEditMode && client.saving" class="fa fa-spinner fa-spin fa-2x findme-color-fc-pink"></div>
+
                     </td>
                     <td>
-                        <b>{{client.id}}</b>
+                        <b ng-show="client.id > 0">{{client.id}}</b>
                     </td>
                     <td>
-                        <span>{{client.legalName}}</span>
+                        <span ng-hide="client.inEditMode">{{client.legalName}}</span>
+                        <input ng-disabled="client.saving" ng-show="client.inEditMode" placeholder="{{vm.appProps.lbl_LglName}}" type="text" class="form-control" ng-model="client.legalName">
                     </td>
                     <td>
-                        <span>{{client.dispName}}</span>
+                        <span ng-hide="client.inEditMode">{{client.dispName}}</span>
+
+                        <div ng-show="client.inEditMode">
+                            <input ng-disabled="client.saving" placeholder="{{vm.appProps.lbl_Cvlty}}" type="text" class="form-control" ng-model="client.civility">
+                            <input ng-disabled="client.saving" placeholder="{{vm.appProps.lbl_LName}}" type="text" class="form-control" ng-model="client.lName">
+                            <input ng-disabled="client.saving" placeholder="{{vm.appProps.lbl_FName}}" type="text" class="form-control" ng-model="client.fName">
+                        </div>
+
                     </td>
                     <td class="text-center">
-                        <span class="fa {{client.active ? 'fa-check text-success' : 'fa-times text-danger'}} fa-2x"></span>
+                        <span ng-hide="client.inEditMode" class="fa {{client.paid ? 'fa-check text-success' : 'fa-times text-danger'}} fa-2x"></span>
+
+                        <span ng-show="client.inEditMode" class="check-box">
+                            <input ng-disabled="client.saving" type="checkbox" value="None" id="clientPaid-{{client.id}}" name="clientPaid-{{client.id}}" ng-model="client.paid" />
+                            <label class="lbl-chkb" for="clientPaid-{{client.id}}"></label>
+                        </span>
                     </td>
                     <td class="text-center">
-                        <span class="fa {{client.paid ? 'fa-check text-success' : 'fa-times text-danger'}} fa-2x"></span>
+                        <span ng-hide="client.inEditMode" class="fa {{client.active ? 'fa-check text-success' : 'fa-times text-danger'}} fa-2x"></span>
+
+                        <span ng-show="client.inEditMode" class="check-box">
+                            <input ng-disabled="client.saving" type="checkbox" value="None" id="clientActive-{{client.id}}" name="clientActive-{{client.id}}" ng-model="client.active" />
+                            <label class="lbl-chkb" for="clientActive-{{client.id}}"></label>
+                        </span>
                     </td>
                 </tr>
             </tbody>
@@ -153,9 +126,9 @@
     <table class="pages col-sm-12 col-xs-12" ng-hide="vm.isBusy">
         <tr>
             <td>
-                <ul class="pagination" ng-repeat="pg in vm.pgsCollection">
+                <ul class="pagination">
 
-                    <li ng-class="(pg.isActive ? 'active' : '') + ' ' + (pg.disabled ? 'disabled' : '') + ' crsr-pointer'">
+                    <li ng-repeat="pg in vm.pgsCollection" ng-class="(pg.isActive ? 'active' : '') + ' ' + (pg.disabled ? 'disabled' : '') + ' crsr-pointer'">
                         <a ng-class="(pg.isActive ? 'active' : '') + ' ' + (pg.disabled ? 'disabled' : '')" ng-click="vm.gotoPage(pg, true)">
                             <span class="{{pg.icon}}" ng-show="(pg.icon.length > 0)"></span><span>{{pg.text}}</span>
                         </a>
