--- a/FindMe.Web.Bo/wwwroot/css/app/search-bar.css
+++ b/FindMe.Web.Bo/wwwroot/css/app/search-bar.css
@@ -3,7 +3,7 @@
     height: 65px;
     position: fixed;
     width: 100%;
-    /*z-index: 1240;*/
+    z-index: 1020;
 }
 
     #searchBar .btn.btn-burger {
@@ -16,7 +16,7 @@
 
     #searchBar span.input-bg {
         display: inline-block;
-        padding: 2px 10px;
+        padding: 2px 40px 2px 10px;
         background-color: white;
         height: 38px;
         max-width: 400px;
@@ -57,6 +57,28 @@
             transform: translateY(4px);
         }
 
+        #searchBar span.input-bg button.clear {
+            position: absolute;
+            right: 15px;
+            top: 50%;
+            transform: translateY(-50%) scale(1);
+            background-color: transparent;
+            border: none;
+            box-shadow: none;
+            outline: none;
+            transition: transform ease-in 200ms;
+        }
+
+            #searchBar span.input-bg button.clear:hover span {
+                transform: scale(1.1);
+                transition: transform ease-in 200ms;
+            }
+
+            #searchBar span.input-bg button.clear:active span {
+                transform: scale(0.9);
+                transition: transform ease-in 75ms;
+            }
+
     #searchBar button.btn.btn-search {
         position: absolute;
         height: 50px;
@@ -75,7 +97,7 @@
             margin-left: -2px;
         }
 
-    #searchBar .cont{
+    #searchBar .cont {
         padding-bottom: 5px;
     }
 
