--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -60,6 +60,7 @@
                         urlGetClients: '@Url.Action("GetClients", "ApiAddress")',
                         urlSaveClients: '@Url.Action("SaveClients", "ApiAddress")',
                         urlGetCatgs: '@Url.Action("GetCatgs", "ApiCatg")',
+                        urlSaveCatgs: '@Url.Action("SaveCatgs", "ApiCatg")',
 
                         lbl_Name: '@Html.GetLabel("lbl_Name")',
                         lbl_FullName: '@Html.GetLabel("lbl_FullName")',
